feat: ActivityLog support
